--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -1,13 +1,55 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>My Profile</title>
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+	<meta charset="utf-8"></meta>
+	<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+	<meta http-equiv="Content-Type" content="text/html"></meta>
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+	<title>My profile</title>
+
+	<!-- Bootstrap core CSS -->
+	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"></link>
+	<link href="css/main.css" rel="stylesheet"></link>
+
+	<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+	<script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-	<h1>My Profile</h1>
-    <p th:text="'Name: ' + ${user.name}" />
-    <p th:text="'Email: ' + ${user.email}" />
-    <a href="/">Log out</a>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">V ITMO</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+	</nav>
+	<div class="container">
+		<div class="row main">
+			<h1>My Profile</h1>
+			<p th:text="'Name: ' + ${user.name}"></p>
+			<p th:text="'Email: ' + ${user.email}"></p>
+			<a href="/">Log out</a>	
+		</div>
+	</div>
 </body>
 </html>
