Add security; Fix some bugs;

--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -14,7 +14,7 @@
 
 #logbox {
     padding: 10px;
-    margin-left: : 80px auto;
+    margin-left:  80px auto;
     margin-right: 80px auto;
     margin-bottom: 80px auto;
     width: 340px;
