--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,84 +1,74 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-	<meta charset="utf-8"></meta>
-	<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-	<meta http-equiv="Content-Type" content="text/html"></meta>
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+    <meta http-equiv="Content-Type" content="text/html"></meta>
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Starter Template for Bootstrap</title>
+    <title>V ITMO</title>
 
-	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"></link>
-	<link href="css/main.css" rel="stylesheet"></link>
-	<link href="css/signup.css" rel="stylesheet"></link>
+    <link th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/main.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/signup.css}" rel="stylesheet"></link>
 
-	<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-	<script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
-
 <body>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">V ITMO</a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</nav>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">V ITMO</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <div sec:authorize="isAuthenticated()">
+                    <li>
+                        <form th:action="@{/logout}" method="post">
+                            <input class="btn btn-info" type="submit" value="Sign Out"/>
+                        </form>
+                    </li>
+                </div>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
 
-	<div class="container">
+<div class="container">
 
-		<div class="row main">
-			<div class="col-lg-6 description">
-				<h1>OLEG SUPER PROGER'S SITE</h1>
-				<p class="lead">With Love<br></br> From Heart.</p>
-			</div>
+    <div class="row main">
+        <div class="col-lg-6 description">
+            <h1>OLEG SUPER PROGER'S SITE</h1>
+            <p class="lead">With Love<br></br> From Heart.</p>
+        </div>
 
-			<div class="col-lg-6">
-				<div id="logbox">   
-					<form id="signup" action="/0" method="post" th:action="@{/0}">
-						<h1>Create an account</h1>
-						<input th:field="*{user.name}" type="text" placeholder="What's your name?" pattern="^[A-Za-z]{2,8}( [A-Za-z]{2,8}){1,2}?$" autofocus="autofocus" required="required" class="input pass"/>
-						<input th:field="*{user.password}" type="password" placeholder="Choose a password" required="required" class="input pass"/>
-						<input th:field="*{passwordConfirm}" type="password" placeholder="Confirm password" required="required" class="input pass"/>
-						<input th:field="*{user.email}" type="email" placeholder="Email address" class="input pass"/>
-						<input type="submit" value="Sign me up!" class="inputButton"/>
-						<div class="text-center">
-							Already have an account? <a href="login" id="login_id">Login</a>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-<!-- Bootstrap core JavaScript
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="../../js/bootstrap.min.js"></script>
-	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+        <div class="col-lg-6">
+            <div id="logbox">
+                <form id="signup" th:action="@{/signup}" method="post">
+                    <h1>Create an account</h1>
+                    <input name="username" type="text" placeholder="What's your username?" pattern="^(\w|[0-9]){4,20}$" autofocus="autofocus" required="required" class="input pass"/>
+                    <input name="password" type="password" placeholder="Choose a password" pattern="^.{6,20}$" required="required" class="input pass"/>
+                    <input name="password_confirm" type="password" placeholder="Confirm password" required="required" class="input pass"/>
+                    <input type="submit" value="Sign me up!" class="inputButton"/>
+                    <div class="text-center">
+                        Already have an account? <a href="login" id="login_id">Login</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script th:href="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
