--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,82 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="utf-8"></meta>
-	<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-	<meta http-equiv="Content-Type" content="text/html"></meta>
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+    <meta http-equiv="Content-Type" content="text/html"></meta>
 
-	<title>Log in</title>
+    <title>Login</title>
 
-	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet"></link>
-	<link href="css/main.css" rel="stylesheet"></link>
-	<link href="css/signup.css" rel="stylesheet"></link>
-
-	<!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-	<script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
+    <!-- Bootstrap core CSS -->
+    <link th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/main.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/signup.css}" rel="stylesheet"></link>
 </head>
-
 <body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">V ITMO</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <div sec:authorize="isAuthenticated()">
+                    <li>
+                        <form th:action="@{/logout}" method="post">
+                            <input class="btn btn-info" type="submit" value="Sign Out"/>
+                        </form>
+                    </li>
+                </div>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">V ITMO</a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</nav>
 
-	<div class="container">
+<div class="container">
+    <div class="row main">
+        <div class="col-lg-6 description">
+            <h1>OLEG SUPER PROGER'S SITE</h1>
+            <p class="lead">With Love<br></br> From Heart.</p>
+        </div>
 
-		<div class="row main">
-			<div class="col-lg-6 description">
-				<h1>OLEG SUPER PROGER'S SITE</h1>
-				<p class="lead">With Love<br></br> From Heart.</p>
-			</div>
+        <div class="col-lg-6">
+            <div id="logbox">
+                <div th:if="${param.error}">
+                    Invalid username and password.
+                </div>
 
-			<div class="col-lg-6">
-				<div id="logbox">
-					<form id="signup" method="post" th:action="@{/log_in}" th:object="${user}">
-						<h1>Account login</h1>
-						<input th:field="*{email}" type="email" placeholder="Enter your email" class="input pass"></input>
-						<input th:field="*{password}" type="password" placeholder="Enter your password" required="required" class="input pass"></input>
-						<input type="submit" value="Sign me in!" class="inputButton"></input>
-						<div class="text-center">
-							<a href="/" id="">create an account</a> - <a href="#" id="">forgot password</a>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-<!-- Bootstrap core JavaScript
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="../../js/bootstrap.min.js"></script>
-	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+                <div th:if="${param.logout}">
+                    You have been logged out.
+                </div>
+
+                <form th:action="@{/login}" method="post" id="signup">
+                    <h1>Login</h1>
+                    <div><input placeholder="Enter your username" pattern="^(\w|[0-9]){4,20}$" required="required" class="input pass" type="text" name="username"/> </div>
+                    <div><input placeholder="Enter your password" pattern="^.{6,20}$" required="required" class="input pass" type="password" name="password"/></div>
+                    <div><input type="submit" value="Sign In" class="inputButton"/></div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script th:href="@{/js/bootstrap.min.js}"></script>
 </body>
 </html>
