--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -10,7 +10,15 @@
     <!-- Bootstrap core CSS -->
     <link th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet"></link>
     <link th:href="@{/css/main.css}" rel="stylesheet"></link>
-    <link th:href="@{/css/signup.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/form.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/profile.css}" rel="stylesheet"></link>
+
+    <!--
+    <link href="../static/css/bootstrap/bootstrap.min.css" rel="stylesheet"></link>
+    <link href="../static/css/main.css" rel="stylesheet"></link>
+    <link href="../static/css/form.css" rel="stylesheet"></link>
+    <link href="../static/css/profile.css" rel="stylesheet"></link>
+    -->
 </head>
 
 <body>
@@ -31,34 +39,51 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a sec:authorize="isAuthenticated()">
+                        <form th:action="@{/logout}" method="post">
+                            <input class="btn-link" type="submit" value="Sign Out"/>
+                        </form>
+                    </a>
+                </li>
+            </ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
 <div class="container">
     <div class="row main">
-        <h1>My Profile</h1>
-        <p th:text="'User name: ' + ${user.username}"></p>
+        <h1 th:text="'Profile: ' + ${user.username}"></h1>
 
-        <div sec:authorize="isAuthenticated()">
+        <div class="col-sm-8 blog-main">
+            <div th:each="post,iterationStatus  : ${posts}">
+                <div class="blog-post">
+                    <h2 class="blog-post-title" th:text="${post.name}"></h2>
+                    <p class="blog-post-meta">January 1, 2014 by <a th:href="'/user/' + ${user.id}" th:text="${user.username}"></a></p>
+                    <p th:text="${post.content}"></p>
+                </div><!-- /.blog-post -->
+            </div>
         </div>
-    </div>
-</div>
 
-<div class="col-lg-3">
-    <div id="logbox">
-        <form th:action="@{/addpost}" method="post">
-            <input name="post_name" type="text" placeholder="Add a post name"  required="required" class="input pass"/>
-            <input name="content" type="text" placeholder="Add a new post"  required="required" class="input pass"/>
-            <input class="inputButton" type="submit" value="Add post"/>
-        </form>
-
-        <form th:action="@{/logout}" method="post">
-            <input class="btn btn-info" type="submit" value="Sign Out"/>
-        </form>
+        <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+            <div class="sidebar-module">
+                <form th:action="@{/post/new}" method="get">
+                    <button type="submit" class="btn btn-info">New post!</button>
+                </form>
+            </div>
+            <div class="sidebar-module">
+                <h4>Elsewhere</h4>
+                <ol class="list-unstyled">
+                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Facebook</a></li>
+                </ol>
+            </div>
+        </div><!-- /.blog-sidebar -->
     </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script th:href="@{/js/bootstrap.min.js}"></script>
+<script th:href="@{/js/bootstrap.js}"></script>
 </body>
 </html>
