Add backend and frontend for settings; Fix some bugs

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <meta charset="utf-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-    <meta http-equiv="Content-Type" content="text/html"></meta>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Content-Type" content="text/html"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>V ITMO</title>
 
-    <link th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet"></link>
-    <link th:href="@{/css/main.css}" rel="stylesheet"></link>
-    <link th:href="@{/css/form.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/main.css}" rel="stylesheet"/>
+    <link th:href="@{/css/form.css}" rel="stylesheet"/>
 
     <!--
     <link href="../static/css/bootstrap/bootstrap.min.css" rel="stylesheet"></link>
@@ -58,7 +58,7 @@
     <div class="row main">
         <div class="col-lg-6 description">
             <h1>OLEG AND YANA SUPER PROGER'S SITE</h1>
-            <p class="lead">With Love<br></br> From Heart.</p>
+            <p class="lead">With Love<br/> From Heart.</p>
         </div>
 
         <div class="col-lg-6">
@@ -70,7 +70,7 @@
                     <input name="password_confirm" type="password" placeholder="Confirm password" required="required" class="input pass"/>
                     <input type="submit" value="Sign me up!" class="inputButton"/>
                     <div class="text-center">
-                        Already have an account? <a href="login" id="login_id">Login</a>
+                        Already have an account? <a href="login" id="login_id">Log in</a>
                     </div>
                 </form>
             </div>
