--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-    <meta http-equiv="Content-Type" content="text/html"></meta>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Content-Type" content="text/html"/>
 
     <title>User profile</title>
 
     <!-- Bootstrap core CSS -->
-    <link th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet"></link>
-    <link th:href="@{/css/main.css}" rel="stylesheet"></link>
-    <link th:href="@{/css/form.css}" rel="stylesheet"></link>
-    <link th:href="@{/css/profile.css}" rel="stylesheet"></link>
-    <link th:href="@{/css/post.css}" rel="stylesheet"></link>
+    <link th:href="@{/css/bootstrap/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/main.css}" rel="stylesheet"/>
+    <link th:href="@{/css/form.css}" rel="stylesheet"/>
+    <link th:href="@{/css/profile.css}" rel="stylesheet"/>
+    <link th:href="@{/css/post.css}" rel="stylesheet"/>
 
     <!--
     <link href="../static/css/bootstrap/bootstrap.min.css" rel="stylesheet"></link>
