--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -59,7 +59,7 @@
             <div th:each="post,iterationStatus  : ${posts}">
                 <div class="blog-post">
                     <h2 class="blog-post-title" th:text="${post.name}"></h2>
-                    <p class="blog-post-meta" th:text="${#dates.format(post.time, 'dd/MMM/yyyy HH:MM')}"><a th:href="'/user/' + ${user.id}" th:text="${user.username}"></a></p>
+                    <p class="blog-post-meta" th:text="${#dates.format(post.time, 'dd/MMM/yyyy HH:mm')}"><a th:href="'/user/' + ${user.id}" th:text="${user.username}"></a></p>
                     <p th:text="${post.content}"></p>
                 </div><!-- /.blog-post -->
             </div>
