--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -38,12 +38,18 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="/search">Search</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a sec:authorize="isAuthenticated()">
                         <form th:action="@{/logout}" method="post">
-                            <input class="btn-link" type="submit" value="Sign Out"/>
+                            <input class="btn-link logout-button" type="submit" value="Sign Out"/>
+                        </form>
+                    </a>
+                    <a sec:authorize="isAnonymous()">
+                        <form th:action="@{/}" method="get">
+                            <input class="btn-link logout-button" type="submit" value="Sign up"/>
                         </form>
                     </a>
                 </li>
@@ -69,16 +75,16 @@
             <div class="sidebar-module">
                 <a sec:authorize="isAuthenticated()">
                     <form th:action="@{/post/new}" method="get">
-                        <button type="submit" class="btn btn-info">New post</button>
+                        <button type="submit" class="btn btn-info btn-sidebar">New post!</button>
                     </form>
 
                     <form th:action="@{/settings}" method="get">
-                        <button type="submit" class="btn btn-info">Settings</button>
+                        <button type="submit" class="btn btn-info btn-sidebar">Settings</button>
                     </form>
                 </a>
                 <a sec:authorize="isAnonymous()">
                     <form th:action="@{/login}" method="post">
-                        <button type="submit" class="btn btn-info">Log in</button>
+                        <button type="submit" class="btn btn-info btn-sidebar">Log in</button>
                     </form>
                 </a>
             </div>
